<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/jungle_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/jungleDesc"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jungle" />

    <ImageView
        android:id="@+id/dark"
        android:layout_width="511dp"
        android:layout_height="294dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/jungleDesc"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dark_box" />

    <TextView
        android:id="@+id/start_txt"
        android:layout_width="248dp"
        android:layout_height="120dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="207dp"
        android:shadowColor="@android:color/background_dark"
        android:text="@string/startTxt"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/holo_green_dark"
        android:textColorHint="@android:color/holo_green_dark"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/strt_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="352dp"
        android:text="@string/start_game_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>